src/objects/Som_Kontaktbericht__c.object
<CustomObject>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_SphereCopy__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>P7S1_SphereCopy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Sphere__c</fullName>
        <description>Zuordnung zur jeweiligen Sphere</description>
        <formula>Text(Owner:User.P7S1_Sphere__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Zuordnung zur jeweiligen Sphere</inlineHelpText>
        <label>P7S1_Sphere</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_SalesTeam__c</fullName>
        <description>Wenn Inhaber Digital ist, in welchem Vertriebsteam? Wird automatisch befüllt.</description>
        <formula>Text(Owner:User.SomDig_SalesTeam__c)</formula>
        <inlineHelpText>Wenn Inhaber Digital ist, in welchem Vertriebsteam? Wird automatisch befüllt.</inlineHelpText>
        <label>Vertriebsteam Digital</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_AngesprocheneThemen__c</fullName>
        <label>Angesprochene Themen</label>
        <picklist>
            <picklistValues>
                <fullName>7TV App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aktuelle Entwicklung/Neuigkeiten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ampya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto-Mandanten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branded Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Conception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Medienkooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gewinnspiel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individuelle Splits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kabel1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lizenz Medienkooperation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marktforschung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maxdome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>maxx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>myvideo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netto-Reichweite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion-/Produkt-Lizenz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSieben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sat.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sat.1 gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>shopkick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport-Mandanten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio71/youtube</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Verkaufsbuero__c</fullName>
        <formula>TEXT(Owner:User.VB_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verkaufsbüro</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_AccountName__c</fullName>
        <description>Mit wem habe ich gesprochen?</description>
        <formula>Som_Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Mit wem habe ich gesprochen? Weitere teilnehmer kann ich im 2. Schritt erfassen - siehe hierzu Teilnehmer.</inlineHelpText>
        <label>Account Ansprechpartner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hilfsfeld für Erstellung Besuchsberichte und Erstellung Besuchsbericht aus Account heraus</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Kontaktberichte</relationshipLabel>
        <relationshipName>Kontaktberichte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_Beschreibung__c</fullName>
        <description>Eingabemöglichkeit für Notizen und weiterführende Informationen zu diesem Vor-Ort-Termin.</description>
        <inlineHelpText>Eingabemöglichkeit für Notizen und weiterführende Informationen zu diesem Vor-Ort-Termin.</inlineHelpText>
        <label>Beschreibung</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Som_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Findet das Gespräch auf einer Veranstaltung wie der dmexco, Agenturtour o.ä. statt?</description>
        <inlineHelpText>Findet das Gespräch auf einer Veranstaltung wie der dmexco, Agenturtour o.ä. statt?</inlineHelpText>
        <label>B2B-Aktionsbezug</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Besuchsberichte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Besuchsberichte</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Som_Datum__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Wann hat der Vor-Ort-Termin stattgefunden?</description>
        <inlineHelpText>Wann hat der Vor-Ort-Termin stattgefunden?</inlineHelpText>
        <label>Datum</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Som_Dauer__c</fullName>
        <description>Wie lang hat der Vor-Ort-Termin gedauert?</description>
        <inlineHelpText>Wie lang hat der Vor-Ort-Termin gedauert? Bitte hier Dauer in Stunden angeben.</inlineHelpText>
        <label>Dauer (h)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Som_EreignisReferenz__c</fullName>
        <externalId>true</externalId>
        <label>Ereignis Referenz</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_GrundDesKontakts__c</fullName>
        <description>Was war der Grund des Kontakts?</description>
        <inlineHelpText>Was war der Grund des Kontakts? Bitte markiere aus der Auswahlliste einen Wert.</inlineHelpText>
        <label>Grund des Kontakts</label>
        <picklist>
            <picklistValues>
                <fullName>E-Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>persönlicher Termin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telefonat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veranstaltung/Messe</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_KfbAllgemein__c</fullName>
        <description>Kunden Feedback Stand/Eventlocation  (nach Schulnoten)</description>
        <inlineHelpText>Kunden Feedback Stand/Eventlocation  (nach Schulnoten)</inlineHelpText>
        <label>Kundenfeedback allgemein</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>keine Angabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_KfbCatering__c</fullName>
        <description>Kunden- Feedback Catering (nach Schulnoten)</description>
        <inlineHelpText>Kunden- Feedback Catering (nach Schulnoten)</inlineHelpText>
        <label>Kundenfeedback Catering</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>keine Angabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_KfbFutureLab__c</fullName>
        <description>Kunden Feedback FutureLab (nach Schulnoten)</description>
        <inlineHelpText>Kunden Feedback FutureLab (nach Schulnoten)</inlineHelpText>
        <label>Kundenfeedback FutureLab</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>keine Angabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_KfbMessestand__c</fullName>
        <description>Kunden Feedback Stand/Eventlocation (nach Schulnoten)</description>
        <inlineHelpText>Kunden Feedback Stand/Eventlocation (nach Schulnoten)</inlineHelpText>
        <label>Kundenfeedback Messestand</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>keine Angabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_KfbMobileCases__c</fullName>
        <description>Kunden Feedback mobile Cases (nach Schulnoten)</description>
        <inlineHelpText>Kunden Feedback mobile Cases (nach Schulnoten)</inlineHelpText>
        <label>Kundenfeedback Mobile Cases</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>keine Angabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_KfbPraesentation__c</fullName>
        <description>Kunden Feedback Präsentationen (nach Schulnoten)</description>
        <inlineHelpText>Kunden Feedback Präsentationen (nach Schulnoten)</inlineHelpText>
        <label>Kundenfeedback Präsentation</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>keine Angabe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_Portfolio__c</fullName>
        <label>Portfolio</label>
        <picklist>
            <picklistValues>
                <fullName>Ampya/Musik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyVideo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>People &amp; Lifestyle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonstiges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio71</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV-Sites/7TV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Som_ProdukteGattungen__c</fullName>
        <description>Über welche Produkte wurde in diesem Vor-Ort-Termin gesprochen - was habe ich adressiert?</description>
        <inlineHelpText>Über welche Produkte wurde in diesem Vor-Ort-Termin gesprochen - was habe ich adressiert? Bitte markiere aus der Auswahlliste einen oder mehrere Wert(e).</inlineHelpText>
        <label>Produkte / Gattungen</label>
        <picklist>
            <picklistValues>
                <fullName>andere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connected TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InPage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OOH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pay TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Som_Screens__c</fullName>
        <label>Screens/weitere Themen</label>
        <picklist>
            <picklistValues>
                <fullName>Addressable TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HbbTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kundenentwicklung/News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marktforschung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiscreen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programmatic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Ads / Konzepte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Targeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbeformen</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Som_TerminId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Prorex Termin Id - wir für die Migration verwendet</description>
        <externalId>true</externalId>
        <inlineHelpText>Prorex Termin Id</inlineHelpText>
        <label>Termin Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Som_Typ__c</fullName>
        <description>Was ist der besuchte Account für uns zum Zeitpunkt des Vor-Ort-Termins?</description>
        <inlineHelpText>Was ist der besuchte Account für uns zum Zeitpunkt des Vor-Ort-Termins? Bitte markiere einen Wert aus der Auswahlliste.</inlineHelpText>
        <label>Typ</label>
        <picklist>
            <picklistValues>
                <fullName>Agentur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mandant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mittler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Potentialkunde</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonstige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermarkter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbetreibender</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_WeitereTeilnehmer__c</fullName>
        <label>Weitere Teilnehmer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Kontaktbericht</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>Som_Datum__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Berichte_aktuelles_jahr</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Berichte Aktuelles Jahr</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Berichte_aktuelles_jahr_Dus</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomTv_Verkaufsbuero__c</field>
            <operation>contains</operation>
            <value>Düsseldorf</value>
        </filters>
        <label>Berichte Aktuelles Jahr Düsseldorf</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Berichte_aktuelles_jahr_ffm</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomTv_Verkaufsbuero__c</field>
            <operation>contains</operation>
            <value>Frankfurt</value>
        </filters>
        <label>Berichte Aktuelles Jahr Frankfurt</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Berichte_aktuelles_jahr_hh</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomTv_Verkaufsbuero__c</field>
            <operation>contains</operation>
            <value>Hamburg</value>
        </filters>
        <label>Berichte Aktuelles Jahr Hamburg</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Berichte_aktuelles_jahr_muc</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomTv_Verkaufsbuero__c</field>
            <operation>contains</operation>
            <value>München</value>
        </filters>
        <label>Berichte Aktuelles Jahr München</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>P7S1_BerichteAjNurMeine</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Berichte AJ nur meine</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_BerichteAJFrankfurtDigital</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomDig_SalesTeam__c</field>
            <operation>contains</operation>
            <value>Frankfurt</value>
        </filters>
        <label>Berichte AJ Frankfurt Digital</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_BerichteAjBerlinDigital</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomDig_SalesTeam__c</field>
            <operation>contains</operation>
            <value>Berlin</value>
        </filters>
        <label>Berichte AJ Berlin Digital</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_BerichteAjDuesseldrfDigital</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomDig_SalesTeam__c</field>
            <operation>contains</operation>
            <value>Düsseldorf</value>
        </filters>
        <label>Berichte AJ Düsseldorf Digital</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_BerichteAjHamburgDigital</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomDig_SalesTeam__c</field>
            <operation>contains</operation>
            <value>Hamburg</value>
        </filters>
        <label>Berichte AJ Hamburg Digital</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_BerichteAjMuenchenDigital</fullName>
        <columns>NAME</columns>
        <columns>Som_Account__c</columns>
        <columns>SomTv_Verkaufsbuero__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Som_Datum__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Som_Datum__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>SomDig_SalesTeam__c</field>
            <operation>contains</operation>
            <value>München</value>
        </filters>
        <label>Berichte AJ München Digital</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Headline/Thema</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Kontaktberichte</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Wenn eine Besuchsbericht auf einer Veranstaltung erstellt wird muss eine Bezug zu einer B2B-Aktion bestehen</description>
        <errorConditionFormula>AND((ISPICKVAL(Som_GrundDesKontakts__c, &apos;Event&apos;) ), ISblank(Som_Campaign__c ))</errorConditionFormula>
        <errorMessage>Um welches Event handelt es sich? Bitte wähle einen Bezug zu einer B2B-Aktion aus.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_AccZuUeberpruefen_KontaktbrProtect</fullName>
        <active>false</active>
        <description>Wenn Haken dran ist dann keine Bearbeitung am Kontaktbericht</description>
        <errorConditionFormula>Som_Account__r.SomTv_ZuUeberpruefenAcc__c</errorConditionFormula>
        <errorMessage>Wenn Account noch überprüft wird dann können keine Änderungen am Kontaktbericht vorgenommen werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ungueltiger_Account</fullName>
        <active>true</active>
        <description>Eine Verlinkung mit einem ungültigen Account soll nicht stattfinden (nur aktive Benutzer mit dem Systemadministrator-Profil können dies).</description>
        <errorConditionFormula>AND($User.ProfileId &lt;&gt; &quot;00e20000000lfOj&quot;,
Som_Contact__r.Account.ungueltiger_Account__c)</errorConditionFormula>
        <errorMessage>Der Besuchsbericht darf nicht mit einem Kontakt eines ungültigen Accounts verlinkt werden.</errorMessage>
    </validationRules>
</CustomObject>